# Influo

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
.github/: dependabot.yml
examples/: example-config.json  simple-config.json
model/project/: procedure.rs
src/: constants.rs  error.rs  logger.rs  main.rs  pipeline_manager.rs  procedure_manager.rs  system_cmd.rs  webserver.rs
src/api/http/: mod.rs
src/model/: mod.rs
src/model/channel/: message.rs  mod.rs
src/model/project/: branch.rs  messages.rs  mod.rs  pipeline.rs  procedure.rs
src/util/: filesystem.rs
test_files/: default_stage_order_test_config.json
