[package]
name = "influo"
version = "0.1.0"
authors = ["Sei4or <sei4or@gmail.com>", "sithsiri <sithpri@gmail.com>"]
description = "CI / CD the right way"
license = "MIT"
edition = "2018"

[dependencies]
serde_json = "1.0"
failure = "0.1.7"
regex = "1"
lazy_static = "1.4.0"
crossbeam-channel = "0.4"
tokio = { version = "0.2", features = ["process", "rt-threaded"] }
futures = "0.3.4"
bytes = "0.5.4"
shell-words = "1.0.0"
