[package]
name = "influo"
version = "0.3.0"
authors = ["Sei4or <sei4or@gmail.com>", "sithsiri <sithpri@gmail.com>"]
description = "CI / CD the right way"
license = "MIT"
edition = "2018"

[dependencies]
serde_json = "1.0"
anyhow = "1.0"
regex = "1"
lazy_static = "1.4.0"
crossbeam-channel = "0.5"
tokio = { version = "1.0.0", features = ["process", "rt-multi-thread", "sync", "io-util"] }
futures = "0.3.4"
shell-words = "1.0.0"
chrono = "0.4"
